--- a/index.html
+++ b/index.html
@@ -1,31 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset-style.css" />
-    <link rel="stylesheet" href="./css/swiper.min.css" />
-    <link rel="stylesheet" href="./css/fancybox.min.css" />
-    <link rel="stylesheet" href="./css/sumoselect2.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="./css/tablet-style.css"
-      media="(min-width: 768px)"
-    />
-    <link
-      rel="stylesheet"
-      href="./css/desk-style.css"
-      media="(min-width: 1025px)"
-    />
-    <title>Landing page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/reset-style.css" />
+  <link rel="stylesheet" href="./css/swiper.min.css" />
+  <link rel="stylesheet" href="./css/fancybox.min.css" />
+  <link rel="stylesheet" href="./css/sumoselect2.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/tablet-style.css" media="(min-width: 768px)" />
+  <link rel="stylesheet" href="./css/desk-style.css" media="(min-width: 1025px)" />
+  <title>Landing Kaiyi</title>
 </head>
+<header class="header">
+  <div class="header__top">
+    <div class="container">
+      <div class="header__top-flex">
+        <span class="header__top-info">
+          <span class="header__top-text"> 27км МКАД, д. Ближние прудищи, вл.1 стр.1</span>
+          <span class="header__top-text text_uppercase">+7 (495) 111 11-11</span>
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="header__container">
+      <a href="#" class="header__logo">
+        <img src="./img/logo.svg" alt="logo" class="header__img">
+      </a>
+      <div class="header__info">
+        <a href="tel:+7 (495) 111 11-11" class="header__info-text">+7 (495) 111 11-11</a>
+      </div>
+      <div class="header__menu">
+        <nav class="header__nav">
+          <a href="#model" class="header__nav-link">модели</a>
+          <a href="#equipement" class="header__nav-link">Комплектации E5</a>
+          <a href="#credits" class="header__nav-link">Кредит</a>
+          <a href="#trade" class="header__nav-link">Trade-In</a>
+        </nav>
+        <div class="header__menu-bottom">
+          <div class="header__menu-info">
+            <a href="tel:+7 (495) 111 11-11" class="header__menu-text header__info-text">+7 (495) 111 11-11</a>
+            <span class="header__menu-text header__info-text">27км МКАД, д. Ближние прудищи, вл.1 стр.1</span>
+          </div>
+          <button class="header__button btn bg_blue" data-fancybox data-src="#modalAll">обратный звонок</button>
+        </div>
+      </div>
+      <div class="burger">
+        <span class="burger__line"></span>
+        <span class="burger__line"></span>
+        <span class="burger__line"></span>
+      </div>
+      <div class="header__btn">
+        <button class="btn bg_blue">обратный звонок</button>
+      </div>
+    </div>
+  </div>
+</header>
+<section class="main-banner">
+  <div class="main-banner__bg">
+    <div class="main-banner__shadow">
+      <picture>
+        <source media="(max-width:1025px)" srcset="./img/main-banner_mob.webp">
+        <img src="./img/main-banner_desk.webp" alt="banner" class="main-banner__img">
+      </picture>
+    </div>
+  </div>
+  <div class="container">
+    <div class="main-banner__info">
+      <h1 class="main-banner__title">
+        Лучшее <br>
+        предложение <br>
+        этого лета! <br>
+      </h1>
+      <div class="main-banner__info-text">
+        <span>
+          KAIYI Е5 с выгодой до <span class="main-banner__info-text_color_blue"> 400 000₽</span><br>
+          КАСКО или 3 ТО <span class="main-banner__info-text_color_blue"> в подарок</span>
+        </span>
+      </div>
+      <div class="main-banner__timer">
+        <span class="main-banner__timer-text">До окончания осталось</span>
+        <div class="timer">
+          <div class="time-count__item time-count__days">
+            <div class="time-count__val">00</div>
+            <span class="time-count__text">дней</span>
+          </div>
+          <span class="timer-points">:</span>
+          <div class="time-count__item time-count__hours">
+            <div class="time-count__val">00</div>
+            <span class="time-count__text">часов</span>
+          </div>
+          <span class="timer-points">:</span>
+          <div class="time-count__item time-count__minutes">
+            <div class="time-count__val">00</div>
+            <span class="time-count__text">минут</span>
+          </div>
+          <span class="timer-points">:</span>
+          <div class="time-count__item time-count__seconds">
+            <div class="time-count__val">00</div>
+            <span class="time-count__text">секунд</span>
+          </div>
+        </div>
+      </div>
+      <form action="" class="main-banner__form form">
+        <div class="banner__inputs form__inputs">
+          <input type="text" name="name" placeholder="Имя" required class="banner__input form-input">
+          <input type="tel" name="phone" placeholder="+7 (___) ___-__-__" required class="banner__input form-input">
+        </div>
+        <button class="banner__form-button form-button">получить предложение</button>
+        <div class="form-checkbox">
+          <label for="checkbox__input-text">
+            <span class="checkbox">
+              <input class="form__input-check" type="checkbox" checked required>
+              <span class="custom-checkbox"></span>
+            </span>
+            <span class="checkbox-text">
+              Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+            </span>
+          </label>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
+<section class="models">
+  <div class="container">
+    <div class="section__upper models__upper">
+      <h2 class="section__title">Модели в наличии</h2>
+    </div>
+  </div>
+</section>
+
 <body>
-    <script src="./libs/jquery.min.js"></script>
-    <script src="./libs/masked-input.min.js"></script>
-    <script src="./libs/fancybox.min.js"></script>
-    <script src="./libs/select2.js"></script>
-    <script src="./js/main.js"></script>
+  <script src="./libs/jquery.min.js"></script>
+  <script src="./libs/masked-input.min.js"></script>
+  <script src="./libs/fancybox.min.js"></script>
+  <script src="./libs/select2.js"></script>
+  <script src="./js/main.js"></script>
 </body>
+
 </html>
