приступил к модельным карточкам

--- a/index.html
+++ b/index.html
@@ -131,6 +131,105 @@
     <div class="section__upper models__upper">
       <h2 class="section__title">Модели в наличии</h2>
     </div>
+    <div class="models__list">
+      <div class="models__card">
+        <div class="models__card-top deks_hide">
+          <span class="models__card-name">KAIYI <span class="models__card-name_color"> Е5</span></span>
+          <a href="#equip" class="models__card-equip">
+            <span>выбрать комплектацию</span>
+            <img src="./img/equip-arrow.svg" alt="arrow">
+          </a>
+        </div>
+        <div class="models__card-swipers">
+          <div class="models__card-photo">
+            <div class="swiper swiper-img">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="./img/k1.png" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/k2.png" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/k3.png" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/k4.png" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/k5.png" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/k6.png" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="models__card-prev">
+            <div thumbsSlider="" class="swiper swiper-prev">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="./img/k1.png" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/k2.png" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/k3.png" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/k4.png" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/k5.png" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/k6.png" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modesls__card-colors">
+            <span class="models__card-color" style="background-color: #901C1C;"></span>
+            <span class="models__card-color" style="background-color: #000000;"></span>
+            <span class="models__card-color" style="background-color: #646C77;"></span>
+            <span class="models__card-color" style="background-color: #FFFFFF;"></span>
+          </div>
+        </div>
+        <div class="models__card-info">
+          <ul class="models__card-actions">
+            <li class="models__card-item">
+              <img src="./img/ok-actions.svg" alt="icon">
+              <span>Выгода до 400 000₽</span>
+            </li>
+            <li class="models__card-item">
+              <img src="./img/ok-actions.svg" alt="icon">
+              <span>скидка за Trade-In до 300 000₽</span>
+            </li>
+            <li class="models__card-item">
+              <img src="./img/ok-actions.svg" alt="icon">
+              <span>кредит от 4,9%</span>
+            </li>
+            <li class="models__card-item">
+              <img src="./img/ok-actions.svg" alt="icon">
+              <span>без первого взноса</span>
+            </li>
+            <li class="models__card-item">
+              <img src="./img/ok-actions.svg" alt="icon">
+              <span>КАСКО или 3 ТО в подарок</span>
+            </li>
+          </ul>
+          <div class="models__card-prices">
+            <span class="models__card-month">от 12 000 ₽/мес</span>
+            <span class="models__card-price">от 1 687 000 ₽</span>
+          </div>
+          <div class="models__card-btns">
+            <button class="btn bg_blue">заявка на кредит</button>
+            <button class="btn bg_blue">получить предложение</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
@@ -139,6 +238,7 @@
   <script src="./libs/masked-input.min.js"></script>
   <script src="./libs/fancybox.min.js"></script>
   <script src="./libs/select2.js"></script>
+  <script src="./libs/swiper-bundle.min.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
