модельные карточки готовы

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             </div>
           </div>
           <div class="models__card-prev">
+            <div class="models__card-prev-bg"></div>
             <div thumbsSlider="" class="swiper swiper-prev">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -189,14 +190,24 @@
               </div>
             </div>
           </div>
-          <div class="modesls__card-colors">
-            <span class="models__card-color" style="background-color: #901C1C;"></span>
-            <span class="models__card-color" style="background-color: #000000;"></span>
-            <span class="models__card-color" style="background-color: #646C77;"></span>
-            <span class="models__card-color" style="background-color: #FFFFFF;"></span>
+          <div class="models__card-colors-info">
+            <div class="modesls__card-colors">
+              <span class="models__card-color" style="background-color: #901C1C;"></span>
+              <span class="models__card-color" style="background-color: #000000;"></span>
+              <span class="models__card-color" style="background-color: #646C77;"></span>
+              <span class="models__card-color active" style="background-color: #FFFFFF;"></span>
+            </div>
+            <span class="models__card-color-text">цвет: <span class="js-color-text"> белый</span></span>
           </div>
         </div>
         <div class="models__card-info">
+          <div class="models__card-top mob_hide">
+            <span class="models__card-name">KAIYI <span class="models__card-name_color"> Е5</span></span>
+            <a href="#equip" class="models__card-equip">
+              <span>выбрать комплектацию</span>
+              <img src="./img/equip-arrow.svg" alt="arrow">
+            </a>
+          </div>
           <ul class="models__card-actions">
             <li class="models__card-item">
               <img src="./img/ok-actions.svg" alt="icon">
@@ -229,6 +240,13 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</section>
+<section class="equipment">
+  <div class="container">
+    <div class="section__upper equipment__upper">
+      <h2 class="section__title equipment__title">комплектации</h2>
     </div>
   </div>
 </section>
