--- a/index.html
+++ b/index.html
@@ -599,6 +599,7 @@
   <script src="./libs/masked-input.min.js"></script>
   <script src="./libs/fancybox.min.js"></script>
   <script src="./libs/select2.js"></script>
+  <script src="./js/timer.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
