--- a/index.html
+++ b/index.html
@@ -248,6 +248,120 @@
     <div class="section__upper equipment__upper">
       <h2 class="section__title equipment__title">комплектации</h2>
     </div>
+    <div class="equipment__heads">
+      <span class="equipment__heads-text active flex_basis_small">LUXURY</span>
+      <span class="equipment__heads-text flex_basis_big">LUXURY +</span>
+    </div>
+    <div class="equipment__card">
+      <div class="equipment__flex">
+        <div class="equipment__info">
+          <div class="equipment__kpp">
+            <span class="equipment__kpp-text">CVT</span>
+          </div>
+          <div class="equipment__swiper-container desk_hide">
+            <div class="swiper swiper-equip_mob">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="./img/equip-test.png" alt="car">
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/equip-test.png" alt="car">
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/equip-test.png" alt="car">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="equipment__card-info">
+            <span>АКПП 6 /</span>
+            <span>Бензин АИ-92 /</span>
+            <span>Полный (4WD) /</span>
+            <span>190 л.с.</span>
+          </div>
+          <div class="equipment__card-btns">
+            <button class="btn bg_blue">заявка на кредит</button>
+            <button class="btn bg_blue">получить предложение</button>
+          </div>
+          <div class="swiper-btns">
+            <div class="swiper-button-prev-mob">
+              <img src="./img/arrow-prev.svg" alt="arrow">
+            </div>
+            <div class="dots" data-slider-dots></div>
+            <div class="swiper-button-next-mob">
+              <img src="./img/arrow-nex.svg" alt="arrow">
+            </div>
+          </div>
+        </div>
+        <div class="equipment__swiper-container mob_hide">
+          <div class="swiper swiper-equip">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="./img/equip-test.png" alt="car">
+              </div>
+              <div class="swiper-slide">
+                <img src="./img/equip-test.png" alt="car">
+              </div>
+              <div class="swiper-slide">
+                <img src="./img/equip-test.png" alt="car">
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="credit">
+  <div class="container">
+    <div class="credit__container">
+      <div class="credit__heads">
+        <h2 class="credit__title">автоКредит<br>
+          от 4,9%
+        </h2>
+        <span class="credit__sub-title">на новый автомобиль Kaiyi</span>
+      </div>
+      <ul class="credit__list">
+        <li class="credit__list-item">
+          <img src="./img/ok-credit.svg" alt="icon">
+          <span>2 документа для оформления (паспорт и В.У.)</span>
+        </li>
+        <li class="credit__list-item">
+          <img src="./img/ok-credit.svg" alt="icon">
+          <span>Скидка на покупку авто до 50 000₽</span>
+        </li>
+        <li class="credit__list-item">
+          <img src="./img/ok-credit.svg" alt="icon">
+          <span>Досрочное погашение без штрафов</span>
+        </li>
+        <li class="credit__list-item">
+          <img src="./img/ok-credit.svg" alt="icon">
+          <span>КАСКО или 3 ТО в подарок</span>
+        </li>
+      </ul>
+      <form action="" class="credit__form">
+        <div class="form__inputs">
+          <input type="text" placeholder="Имя" required name="name" class="credit__form-input banner__input form-input">
+          <input type="tel" placeholder="+7 (___) ___-__-__" required name="phone"
+            class="credit__form-input banner__input form-input">
+        </div>
+        <button class="btn form__button bg_blue credit__form-button">отправить заявку</button>
+        <div class="form-checkbox">
+          <label for="checkbox__input-text">
+            <span class="checkbox">
+              <input class="form__input-check" type="checkbox" checked required>
+              <span class="custom-checkbox"></span>
+            </span>
+            <span class="checkbox-text">
+              Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+            </span>
+          </label>
+        </div>
+      </form>
+    </div>
   </div>
 </section>
 
