--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img src="./img/time.svg" alt="time">
                 Ежедневно с 8:00 до 21:00
               </span>
-              <a href="tel:+7 (495) 111 11-11" class="header__menu-text">
+              <a href="tel:+7 (495) 111 11-11" class="header__menu-text last_order_desk">
                 <img src="./img/phone_mob.svg" alt="phone">
                 +7 (495) 111 11-11
               </a>
@@ -106,6 +106,54 @@
           </div>
         </div>
         <button class="main-banner__button btn bg_blue">Получить предложение</button>
+      </div>
+    </div>
+  </section>
+  <section class="actions">
+    <div class="container">
+      <div class="actions__list">
+        <div class="actions__list-item">
+          <picture>
+            <source media="(max-width:1024px)" srcset="./img/action_1.svg">
+            <img src="./img/action_1_desk.svg" alt="icon">
+          </picture>
+          <div class="actions__list-text">
+            <span>Ставка от </span>
+            <b>4,9%</b>
+          </div>
+        </div>
+        <div class="actions__list-item">
+          <picture>
+            <source media="(max-width:1024px)" srcset="./img/action_3.svg">
+            <img src="./img/action_3_desk.svg" alt="icon">
+          </picture>
+          <div class="actions__list-text">
+            <span>TRADE-IN до </span>
+            <b>300 000₽</b>
+          </div>
+        </div>
+        <div class="actions__list-item">
+          <picture>
+            <source media="(max-width:1024px)" srcset="./img/action_2.svg">
+            <img src="./img/action_2_desk.svg" alt="icon">
+          </picture>
+          <div class="actions__list-text text_width">
+            <span>Гарантии 
+              в подарок</span>
+            <b>5 лет</b>
+          </div>
+        </div>
+        <div class="actions__list-item">
+          <picture>
+            <source media="(max-width:1024px)" srcset="./img/action_4.svg">
+            <img src="./img/action_4_desk.svg" alt="icon">
+          </picture>
+          <div class="actions__list-text">
+            <span>Скидка 
+              за кредит</span>
+            <b>70 000₽</b>
+          </div>
+        </div>
       </div>
     </div>
   </section>
